[tool.poetry]
name = "cellcounter"
version = "0.1.0"
description = ""
authors = ["Dominik Both"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
PySide6 = "^6.5.0"
opencv-python = "^4.7.0.72"
tifffile = "^2023.4.12"
numpy = "^1.24.3"
natsort = "^8.3.1"
qimage2ndarray = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
